--- a/frontend/style.css
+++ b/frontend/style.css
@@ -57,7 +57,8 @@
     color: #fff;
     font-family: 'Luckiest Guy', cursive;
     font-size: 50px;
-    background-color:rgb(200, 159, 238)
+    background-color:rgb(200, 159, 238);
+    letter-spacing: 0.2em
 }
 
 #root header button {
@@ -108,4 +109,41 @@
 
 #root header button.clicked svg rect:nth-child(3){
     transform: translate(20px, 20px) rotate(-45deg) 
+}
+
+/* Beúszó menü */
+
+#floating-menu {
+    font-family: 'Luckiest Guy', cursive;
+    background: rgb(233, 170, 212);
+    padding: 5px;
+    width: 400px;
+    z-index: 100;
+    position: fixed;
+    bottom: 20%;
+    right: 0;
+    transform: translateY(-50%);
+    /* transition: 0.5s; */
+}
+
+#floating-menu a, 
+#floating-menu h3 {
+    font-size: 30px;
+    display: block;
+    margin: 0 0.5em;
+    color: #fff
+}
+
+#floating-menu h3 {
+    padding-bottom: 20px;
+    font-size: 40px;
+    letter-spacing: 0.2em
+}
+
+#floating-menu .closebtn {
+    position: absolute;
+    top: 0;
+    left: 25px;
+    font-size: 36px;
+    margin-left: 350px;
 }
