--- a/frontend/style.css
+++ b/frontend/style.css
@@ -37,113 +37,38 @@
 
 
 #root {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     width: 100%;
     max-width: 1920px;
+    background-color: cornsilk;
 }
     
-.card {
-    margin: auto 10px;
-    padding-top: 100px
-}
-
-#root header {
-    z-index: 100;
-    position: fixed;
-    width: 100%;
-    height: 60px;
-    padding-left: 40%;
-    color: #fff;
-    font-family: 'Luckiest Guy', cursive;
-    font-size: 50px;
-    background-color:rgb(200, 159, 238);
-    letter-spacing: 0.2em
-}
-
-#root header button {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 40px;
-    height: 40px;
-    margin: 10px
-}
-
-
-#root header button svg {
-    pointer-events: none 
-}
-
-/* pointer-events: letiltja az elemről az interakciós eseményeket */
-
-#root header button svg rect {
-    fill:azure;
-    transform-origin: center;
-    transform-box: fill-box;
-    transition: opacity 400ms, transform 400ms;
-}
-
-#root header button svg rect:nth-child(1){
-    transform: translate(10px, 10px)
-}
-
-#root header button svg rect:nth-child(2){
-    transform: translate(10px, 19px)
-}
-
-#root header button svg rect:nth-child(3){
-    transform: translate(10px, 28px)
-}
-
-/* clicked status */
-
-#root header button.clicked svg rect:nth-child(1){
-    transform: translate(20px, 20px) rotate(45deg) 
-}
-
-#root header button.clicked svg rect:nth-child(2){
-    transform: translate(10px, 19px);
-    opacity: 0
-}
-
-#root header button.clicked svg rect:nth-child(3){
-    transform: translate(20px, 20px) rotate(-45deg) 
-}
-
-/* Beúszó menü */
-
-#floating-menu {
-    font-family: 'Luckiest Guy', cursive;
-    background: rgb(233, 170, 212);
+input {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    border-style: solid 1px;
+    background-color: #FFFFFF;
     padding: 5px;
-    width: 400px;
-    z-index: 100;
-    position: fixed;
-    bottom: 20%;
-    right: 0;
-    transform: translateY(-50%);
-    /* transition: 0.5s; */
+    font-size: 20px;
+    font-family: "Arial, Helvetica", sans-serif;
+    font-size: 13px;
+    color: #2c3e50;
+    border: #010c16 1px solid;
 }
 
-#floating-menu a, 
-#floating-menu h3 {
-    font-size: 30px;
-    display: block;
-    margin: 0 0.5em;
-    color: #fff
-}
-
-#floating-menu h3 {
-    padding-bottom: 20px;
-    font-size: 40px;
-    letter-spacing: 0.2em
-}
-
-#floating-menu .closebtn {
-    position: absolute;
-    top: 0;
-    left: 25px;
-    font-size: 36px;
-    margin-left: 350px;
+button {
+    position: relative;
+    width: 100px;
+    height: 35px;
+    background-color: #9fbaec;
+    padding-bottom: 3px;
+    margin-left: 45px;
+    border: solid 1px;
+    border-radius: 50px;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
 }
