Display changed to grid

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -37,8 +37,8 @@
 
 
 #root {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
     width: 100%;
     max-width: 1920px;
 }
@@ -46,6 +46,10 @@
 .card {
     margin: auto 10px;
     padding-top: 100px
+}
+
+.card img {
+    width: 400px;
 }
 
 #root header {
@@ -117,7 +121,7 @@
     font-family: 'Luckiest Guy', cursive;
     background: rgb(233, 170, 212);
     padding: 5px;
-    width: 400px;
+    width: 350px;
     z-index: 100;
     position: fixed;
     bottom: 20%;
